--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body{
   font-family: 'Poppins', sans-serif!important;
 }
 
+.catalogodiv:hover{
+   text-decoration: none!important;
+}
+
 /*--------------------navbar-------------------------*/
 .navspan{
   font-weight: bold!important;
