--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ body{
   background-image: url('../img/bgc.png');
   background-repeat:no-repeat;
   object-fit: contain;
-  height: 440px;
+  height: 30vw;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -329,13 +329,14 @@ body{
   color: #000!important;
   box-shadow: 0px 0px 11px 0px #949494;
   position: absolute;
+  font-size: 1vw;
   margin-top: 7%;
 }
 
 .elemento_s5 img{
   float: left;
   max-width: 35%;
-  max-height: 35%;
+  max-height: 45%;
   padding-top: 4%;
   padding-right: 4%;
   padding-bottom: 4%;
@@ -348,18 +349,38 @@ body{
 
 @media only screen and (max-width: 767px){
   .section5{
-    height: 110vw;
+    height: 100vw;
   }
 
   .elemento_s5 h5{
     font-weight: bold;
     font-size: 15px;
   }
+
+  .elemento_s5{
+    font-size: 2vw;
+  }
+}
+
+@media only screen and (max-width: 494px){
+  .elemento_s5 {
+    font-size: 2.5vw;
+  }
+
+  .elemento_s5 img{
+    float: left;
+    max-width: 45%;
+    max-height: 45%;
+    padding-top: 4%;
+    padding-right: 4%;
+    padding-bottom: 4%;
+  }
+
 }
 
 @media only screen and (max-width: 420px){
   .section5{
-    height: 140vw;
+    height: 110vw;
   }
 }
 
@@ -418,9 +439,10 @@ body{
 }
 
 .section11 h1{
+  color: white!important;
   letter-spacing: 15px;
   font-size: 2vw;
-  text-shadow: 0px 0px 6px rgba(30,30,30,0.7);
+  text-shadow: 0px 0px 10px rgba(40,40,40,0.5);
   text-align: center;
   padding-top: 10%;
   color: #000;
