--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 html {
-    scroll-behavior:smooth;
+  scroll-behavior:smooth;
 }
 
 body{
   background-color: #fafafa!important;
-  font-family: 'Poppins', sans-serif!important;
+  font-family: 'Montserrat', sans-serif!important;
 }
 
 .catalogodiv:hover{
-   text-decoration: none!important;
+  text-decoration: none!important;
 }
 
 /*--------------------navbar-------------------------*/
@@ -84,11 +86,11 @@ body{
 
 @media only screen and (max-width: 575px){
   .nav-item {
-  text-align: center!important;
+    text-align: center!important;
   }
 
   .title_second{
-  font-size: 3vw!important;
+    font-size: 3vw!important;
   }
 
   .title_main{
@@ -99,19 +101,12 @@ body{
 /*Fin de los estilos Navbar*/
 /*----------------------------------------------------------------------------*/
 .txt_imgmain{
-  font-size: 7vw;
+  font-size: 9.5vw;
   font-weight: bold!important;
   color: white;
   text-shadow: 0px 0px 6px rgba(30,30,30,0.7);
   line-height: 1.1;
-}
-
-
-.txt_imgsecond{
-  font-size: 4.5vw;
-  color: white;
-  text-shadow: 0px 0px 6px rgba(30,30,30,0.7);
-  line-height: 1;
+  margin-top: -2%;
 }
 
 /*Section 1*/
@@ -144,7 +139,7 @@ body{
   background-repeat: no-repeat;
   font-size: 3vw;
   -webkit-transition: all 0.4s ease-in;
-   transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
 .catalogo:hover{
@@ -161,7 +156,12 @@ body{
   background-color: #1e1e1e;
   color: white;
   text-align: center;
+  line-height: 2.5vw;
   letter-spacing: 0.5em;
+  font-size: 1.2vw;
+}
+
+.frase{
   font-size: 1.5vw;
 }
 /*---------------------------Fin section 2-----------------------------------*/
@@ -173,63 +173,63 @@ body{
 }
 
 .item_s3 li {
-      display: inline-block!important;
-      width: 1vw!important;
-      height: 1vw!important;
-      margin: 3%!important;
-      border: none!important;
-      border-radius: 100%!important;
-      background-color: white!important;
-      opacity: 1!important;
+  display: inline-block!important;
+  width: 1vw!important;
+  height: 1vw!important;
+  margin: 3%!important;
+  border: none!important;
+  border-radius: 100%!important;
+  background-color: white!important;
+  opacity: 1!important;
 }
 
 
 .item_s3 .active{
-      background-color: #fb9251!important;
+  background-color: #fb9251!important;
 }
 
 /*.section3{
-  padding-top: 9%;
-  padding-left: 7%;
-  padding-bottom: 7%;
-  background-image: url('../img/s1.png');
+padding-top: 9%;
+padding-left: 7%;
+padding-bottom: 7%;
+background-image: url('../img/s1.png');
 
-  height: 100%;
+height: 100%;
 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
 }
 
 .txt_imgs3 {
-  font-size: 6.5em;
-  font-weight: bold;
-  line-height: 1.1;
-  color: rgba(0, 0, 0, 0);
-  -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: #fff;
-  position: absolute;
-    z-index:100;
+font-size: 6.5em;
+font-weight: bold;
+line-height: 1.1;
+color: rgba(0, 0, 0, 0);
+-webkit-text-stroke-width: 3px;
+-webkit-text-stroke-color: #fff;
+position: absolute;
+z-index:100;
 }
 
 .txt_imgs3overlay{
-  font-size: 6.5em;
-  font-weight: bold;
-  line-height: 1.1;
-  color: rgba(30, 30, 30, 0);
-  -webkit-text-stroke-width: 4px;
-  -webkit-text-stroke-color: rgba(30, 30, 30, 0.5);
-  filter: blur(2px);
-  -webkit-filter: blur(2px);
+font-size: 6.5em;
+font-weight: bold;
+line-height: 1.1;
+color: rgba(30, 30, 30, 0);
+-webkit-text-stroke-width: 4px;
+-webkit-text-stroke-color: rgba(30, 30, 30, 0.5);
+filter: blur(2px);
+-webkit-filter: blur(2px);
 }
 
 .txt_imgs3second{
-  font-size: 5.5em;
-  font-weight: bold;
-  color: white;
-  text-shadow: -2px 2px 4px rgba(30,30,30,0.7);
-  line-height: 1.1;
-  margin-left: 20%;
+font-size: 5.5em;
+font-weight: bold;
+color: white;
+text-shadow: -2px 2px 4px rgba(30,30,30,0.7);
+line-height: 1.1;
+margin-left: 20%;
 }*/
 /*---------------------------Fin section 3-----------------------------------*/
 /*Section 4*/
@@ -240,9 +240,9 @@ body{
 
 .section4 h1{
   text-align: center;
-  font-size: 6.5vw;
+  font-size: 5vw;
   letter-spacing: 2px;
-  font-weight: bold;
+  font-weight: lighter;
 }
 
 .elemento{
@@ -267,10 +267,13 @@ body{
   text-align: center;
   margin-top: -10%;
   margin-left: 42%;
+  font-weight: lighter;
+  letter-spacing: 0.12em;
 }
 
 .elemento_txt span{
-  font-weight: bold;
+  font-size: 1.5vw;
+  letter-spacing: 0.2em;
 }
 
 .elemento_txt2{
@@ -281,15 +284,18 @@ body{
   right: 0;
   z-index:100;
   color: white;
-  font-size: 1.5vw;
-  padding: 1%;
+  font-size: 1.2vw;
+  padding: 1.8%;
   text-align: center;
-  margin-top: -10%;
+  margin-top: -12%;
   margin-left: 38%;
+  font-weight: lighter;
 }
 
 .elemento_txt2 span{
   font-weight: bold;
+  font-size: 1.6vw;
+  letter-spacing: 0.1em;
 }
 
 @media only screen and (max-width: 767px){
@@ -303,10 +309,18 @@ body{
     font-size: 15px;
   }
 
+  .elemento_txt span{
+    font-size: 18px;
+  }
+
   .elemento_txt2{
     margin-top: 2%;
     margin-left: 0;
     font-size: 15px;
+  }
+
+  .elemento_txt2 span{
+    font-size: 18px;
   }
 }
 /*---------------------------Fin section 4-----------------------------------*/
@@ -435,7 +449,6 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 1%;
 }
 
 .section11 h1{
@@ -450,39 +463,66 @@ body{
 
 /*---------------------------Fin section 11------------------------------------*/
 /*--------------------------Section 12-----------------------------------------*/
-.section12{
-  margin-bottom: 2%;
+.contactos{
+  background-color: #2e2e2e;
+  color: #fff;
+}
+
+
+.text-center, dt, dd{
+  font-weight: lighter!important;
+  line-height: 2em!important;
 }
 
 input[type=text], select, textarea {
   width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #1b1b1b;
   border-radius: 4px;
   box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
+  color: #fff;
+  background-color: #1b1b1b;
+  font-weight: lighter!important;
 }
 
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.formC input:focus, .formC textarea:focus {
+box-shadow: 0 0 3px #787878 !important;
+}
+input:focus, textarea:focus, select:focus {
+outline-offset: 0px !important;
+outline: none !important;
 }
 
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-dd{
-  text-align: justify;
+.tileC{
+  margin-left: 2%;
 }
 
 .enviar{
-  background-color: black!important;
+  background-color: #111;
+  border: none;
+  padding: 2.5%;
+  cursor: pointer;
+  outline: inherit;
+  margin-left: 14%;
+  border-radius: 10px;
+}
+
+.enviar:hover{
+  background-color: #1b1b1b;
 }
 /*---------------------------Fin section 12------------------------------------*/
+/*---------------------------Section 13------------------------------------*/
+.section13{
+  background-color: #000;
+  color: white;
+  font-weight: lighter;
+  text-align: center;
+  line-height: 2.5vw;
+  letter-spacing: 0.5em;
+  font-size: 1.2vw;
+  padding-bottom: 3%;
+  padding-top: 2%;
+}
+/*---------------------------Fin section 13------------------------------------*/
