--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,12 @@ outline: none !important;
 .enviar:hover{
   background-color: #1b1b1b;
 }
+
+@media only screen and (max-width: 767px){
+  .enviar{
+    margin-left: 0%;
+  }
+}
 /*---------------------------Fin section 12------------------------------------*/
 /*---------------------------Section 13------------------------------------*/
 .section13{
