--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body{
   padding-left: 7%;
   padding-bottom: 7%;
   /* The image used */
-  background-image: url('../img/g3.jpg');
+  background-image: url('../img/gi.jpg');
 
   /* Full height */
   height: 100%;
