--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,8 @@ body{
 /*Fin de los estilos Navbar*/
 /*----------------------------------------------------------------------------*/
 .txt_imgmain{
-  font-size: 9.5vw;
-  font-weight: bold!important;
+  font-size: 7vw;
   color: white;
-  text-shadow: 0px 0px 6px rgba(30,30,30,0.7);
   line-height: 1.1;
   margin-top: -2%;
 }
@@ -163,6 +161,18 @@ body{
 
 .frase{
   font-size: 1.5vw;
+}
+
+@media only screen and (max-width: 767px){
+  .section2{
+    font-size: 2.5vw;
+    letter-spacing: 0;
+    line-height: inherit;
+  }
+
+  .frase{
+    font-size: 2.5vw;
+  }
 }
 /*---------------------------Fin section 2-----------------------------------*/
 /*Section 3*/
@@ -327,7 +337,6 @@ margin-left: 20%;
 /*Section 5*/
 /*---------------------------------------------------------------------------*/
 .section5{
-  background-image: url('../img/bgc.png');
   background-repeat:no-repeat;
   object-fit: contain;
   height: 30vw;
@@ -424,7 +433,8 @@ margin-left: 20%;
   display: inline-block!important;
   width: 1vw!important;
   height: 1vw!important;
-  margin: 2%!important;
+  margin-left: 2%!important;
+  margin-right: 2%!important;
   border: none!important;
   border-radius: 100%!important;
   background-color: #ff8b49!important;
@@ -435,8 +445,12 @@ margin-left: 20%;
   background-color: #b84502!important;
 }
 
-#gallery2P{
-  margin-top: 10px;
+
+
+@media only screen and (max-width: 900px){
+  .item_s8 li{
+    margin-bottom: -2%!important;
+  }
 }
 /*---------------------------Fin section 10------------------------------------*/
 /*secciones 11 se repite estilos de la  5*/
@@ -459,6 +473,14 @@ margin-left: 20%;
   text-align: center;
   padding-top: 10%;
   color: #000;
+}
+
+@media only screen and (max-width: 767px){
+  .section11 h1{
+    font-size: 2.5vw;
+    letter-spacing: 0;
+    line-height: inherit;
+  }
 }
 
 /*---------------------------Fin section 11------------------------------------*/
@@ -505,7 +527,7 @@ outline: none !important;
   padding: 2.5%;
   cursor: pointer;
   outline: inherit;
-  margin-left: 14%;
+  margin-left: 4.3%;
   border-radius: 10px;
 }
 
@@ -513,11 +535,6 @@ outline: none !important;
   background-color: #1b1b1b;
 }
 
-@media only screen and (max-width: 767px){
-  .enviar{
-    margin-left: 0%;
-  }
-}
 /*---------------------------Fin section 12------------------------------------*/
 /*---------------------------Section 13------------------------------------*/
 .section13{
